[project]
name = "comfyui-api"
version = "2.0.0"
description = "OpenAI compatible API bridge for ComfyUI with txt2img and img2img support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "workflow_txt2img.json", "workflow_img2img.json"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
